--- a/css/styles.css
+++ b/css/styles.css
@@ -32,6 +32,7 @@ h4{
   margin-top: 0;
   margin-bottom: 0;
   padding-left: 0;
+
 }
 
 body {
@@ -39,7 +40,9 @@ body {
 }
 
 .conteiner {
-  background-color: tomato;
+  
+  margin-left: auto;
+  margin-right: auto;
   width: 1230px;
   padding-left: 15px;
   padding-right: 15px;
@@ -47,7 +50,7 @@ body {
 
 /* Логотип*/
 .logo {
- 
+  margin-right: 93px;
 
   font-family: Raleway;
   font-weight: 700;
@@ -64,27 +67,46 @@ body {
 }
 
 /* главное меню с контактами*/
-
+.page-header >.conteiner{
+  display: flex;
+  align-items: center;
+}
+ 
 .page-header {
 
+
   color: var(--black-text-color);
-  background-color: var(--white-background-color);
+  background-color:var(--white-background-color);
+  
   
 }
 
-.nav {
- 
-  
+.nav{
+  display: flex;
 }
 
 .site-nav{
-  
+  display: flex;
+}
+
+.site-nav>.item:not(:last-child){
+margin-right: 50px;
+}
+.header-links{
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+
+.mail-link{
+   margin-right: 50px;
 }
 
 .header-contacts{
   display: flex;
-  /*align-items:flex-end;*/
+  margin-left: auto;
 }
+
 
 .site-nav a {
   font-weight: 500;
@@ -118,9 +140,16 @@ body {
 
 .hero {
   background-color: var(--dark-backgraund-color);
+  text-align: center;
 }
 
 .hero-text {
+  
+  display: block;
+  padding-top: 200px;  
+  padding-bottom: 30px;
+  margin-left: auto;
+  margin-right: auto;
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
@@ -133,10 +162,14 @@ body {
 }
 
 .hero-button {
+  
   width: 200px;
   height: 50px;
   left: 700px;
   top: 430px;
+
+  margin-bottom: 200px;
+  cursor: pointer;
 
   font-weight: 700;
   font-size: 16px;
@@ -227,7 +260,7 @@ body {
 /*Футер*/
 .page-footer {
   background-color: var(--dark-backgraund-color);
-}
+
 
 .logo-color-footer {
   color: var(--white-text-color);
